--- a/trabalho/metas.html
+++ b/trabalho/metas.html
@@ -10,58 +10,64 @@
 	</head>
 	<body>
 		<header>
-			<h1><img id="logo" src="./img/peixe.png">Vida na água</h1>
-			<nav class="menu">
-				<ul>
-					<li><a href="index.html">Inicio</a></li>
-					<li><a href="sobre.html">Sobre</a></li>
-					<li id="ativado"><a href="metas.html">Metas</a></li>
-					<li><a href="em-acao.html">Em ação</a></li>
-					<li><a href="faca-sua-parte.html">Faça sua parte</a></li>
-				</ul>
-			</nav>
+			<h1><a href="index.html"><img id="logo" src="./img/peixe.png">Vida na água</a></h1>
+			
+			<input type="checkbox" id="check">
+			<label id="icone" for="check"><img src="./img/menu_mobile.png"></label>
+			
+			<div class="barra_menu">
+				<nav class="menu">
+					<ul>
+						<li><a href="index.html">Inicio</a></li>
+						<li><a href="sobre.html">Sobre</a></li>
+						<li><a id="ativado" href="metas.html">Metas</a></li>
+						<li><a href="em-acao.html">Em ação</a></li>
+						<li><a href="faca-sua-parte.html">Faça sua parte</a></li>
+					</ul>
+				</nav>
+			</div>
 		</header>
-	
-		<p id="titulo">Objetivo 14. Conservação e uso sustentável dos oceanos, dos mares e dos recursos marinhos para o desenvolvimento sustentável</p>
+		
 		<div class="corpo">
+			<h2 id="titulo">Objetivo 14. Conservação e uso sustentável dos oceanos, dos mares e dos recursos marinhos para o desenvolvimento sustentável</h2>
 			<div class="conteudo">
-				<img src="./img/objetivo_14_1.png" alt="imagem">
+				<img src="./img/objetivo_14_1.png">
 				<p>Até 2025, prevenir e reduzir significativamente a poluição marinha de todos os tipos, especialmente a advinda de atividades terrestres, incluindo detritos marinhos e a poluição por nutrientes</p>
 			</div>
 			<div class="conteudo">
-				<img src="./img/objetivo_14_2.png" alt="imagem">
+				<img src="./img/objetivo_14_2.png">
 				<p>Até 2020, gerir de forma sustentável e proteger os ecossistemas marinhos e costeiros para evitar impactos adversos significativos,inclusive por meio  do reforço da sua capacidade de resiliência, e tomar medidas para a sua restauração, a fim de assegurar oceanos saudáveis e produtivos</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_3.png" alt="imagem">
+				<img src="./img/objetivo_14_3.png">
 				<p>Minimizar e enfrentar os impactos da acidificação dos oceanos, inclusive por meio do reforço da cooperação científica em todos os níveis.</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_4.png" alt="imagem">
+				<img src="./img/objetivo_14_4.png">
 				<p>Até 2020, efetivamente regular a coleta, e acabar com a sobrepesca, ilegal, não reportada e não regulamentada e as práticas de pesca destrutivas, e implementar planos de gestão com base científica, para restaurar populações de peixes no menor tempo possível, pelo menos a níveis que possam produzir rendimento máximo sustentável, como determinado por suas características biológicas.</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_5.png" alt="imagem">
+				<img src="./img/objetivo_14_5.png">
 				<p>Até 2020, conservar pelo menos 10% das zonas costeiras e marinhas, de acordo com a legislação nacional e internacional, e com base na melhor informação científica disponível.</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_6.png" alt="imagem">
+				<img src="./img/objetivo_14_6.png">
 				<p>Até 2020, proibir certas formas de subsídios à pesca, que contribuem para a sobrecapacidade e a sobrepesca, e eliminar os subsídios que contribuam para a pesca ilegal, não reportada e não regulamentada, e abster-se de introduzir novos subsídios como estes, reconhecendo que o tratamento especial e diferenciado adequado e eficaz para os países em desenvolvimento e os países menos desenvolvidos deve ser parte integrante da negociação sobre subsídios à pesca da Organização Mundial do Comércio</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_7.png" alt="imagem">
+				<img src="./img/objetivo_14_7.png">
 				<p>Até 2030, aumentar os benefícios econômicos para os pequenos Estados insulares em desenvolvimento e os países menos desenvolvidos, a partir do uso sustentável dos recursos marinhos, inclusive por meio de uma gestão sustentável da pesca, aquicultura e turismo.'</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_a.png" alt="imagem">
+				<img src="./img/objetivo_14_a.png">
 				<p>Aumentar o conhecimento científico, desenvolver capacidades de pesquisa e transferir tecnologia marinha, tendo em conta os critérios e orientações sobre a Transferência de Tecnologia Marinha da Comissão Oceanográfica Intergovernamental, a fim de melhorar a saúde dos oceanos e aumentar a contribuição da biodiversidade marinha para o desenvolvimento dos países em desenvolvimento, em particular os pequenos Estados insulares em desenvolvimento e os países menos desenvolvidos.</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_b.png" alt="imagem">
+				<img src="./img/objetivo_14_b.png">
 				<p>Proporcionar o acesso dos pescadores artesanais de pequena escala aos recursos marinhos e mercados</p>
 			</div>
 			<div class="conteudo">	
-				<img src="./img/objetivo_14_c.png" alt="imagem">
+				<img src="./img/objetivo_14_c.png">
 				<p>Assegurar a conservação e o uso sustentável dos oceanos e seus recursos pela implementação do direito internacional, como refletido na UNCLOS [Convenção das Nações Unidas sobre o Direito do Mar], que provê o arcabouço legal para a conservação e utilização sustentável dos oceanos e dos seus recursos, conforme registrado no parágrafo 158 do “Futuro Que Queremos”.</p>
 			</div>	
 		</div>
@@ -70,26 +76,30 @@
 			<div>
 				<h4>Sobre</h4>
 				<ul>
-					<li><a href="#">Sobre a ONU</a></li>
-					<li><a href="#">Os Objetivos Sustentaveis de Desenvolvimento</a></li>
+					<li><a href="sobre.html">Sobre a ONU</a></li>
+					<li><a href="https://brasil.un.org/pt-br/sdgs">Os Objetivos Sustentaveis de Desenvolvimento</a></li>
 				</ul>
 			</div>
 			
 			<div>
 				<h4>Faça sua parte</h4>
-				<a href="faca-sua-parte.html">Como ajudar?</a>
+				<ul>
+					<li><a href="faca-sua-parte.html">Como ajudar?</a></li>
+				</ul>
 			</div>
 			
 			<div>
-				<ul>
-					<li><a href="#"><img src="" alt="">Twitter</a></li>
-					<li><a href="#"><img src="" alt="">Facebook</a></li>
-					<li><a href="#"><img src="" alt="">Google</a></li>
+				<ul class="redes_sociais">
+					<a href="https://www.facebook.com/theglobalgoals" target="_blank"><img src="./img/logo_facebook.png" alt="logo do Facebook"><li>Facebook</li></a>
+					<a href="https://www.instagram.com/TheGlobalGoals/" target="_blank"><img src="./img/logo_instagram.png" alt="logo do Instagram"><li>Instagram</li></a>
+					<a href="https://twitter.com/TheGlobalGoals" target="_blank"><img src="./img/logo_twitter.png" alt="logo do Twitter"><li>Twitter</li></a>
+					<a href="https://www.youtube.com/channel/UCRfuAYy7MesZmgOi1Ezy0ng" target="_blank"><img src="./img/logo_youtube.png" alt="logo do Youtube"><li>Youtube</li></a>
+					<a href="https://www.globalgoals.org" target="_blank"><img src="./img/logo_obs.png" alt="logo do OSD"><li>Global Goals</li></a>
 				</ul>
 			</div>
 		</footer>
 		<div class="criacao">
-			<p> Design por Amanda Fully, Rebeca Mari e Ygor Gabriel</p>
+			<p>© Copyright 2020 | Design por <a href="https://amandafully.github.io/" target="_blank">Amanda Fully</a> e <a href="https://ygorgabriel99.github.io/" target="_blank">Ygor Gabriel</a></p>
 		</div>
 	</body>
 </html>
