--- a/trabalho/faca-sua-parte.html
+++ b/trabalho/faca-sua-parte.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<meta charset="utf8">
+		<meta charset="utf-8">
 		<title>Vida na Água | Faça Sua Parte</title>
 		<link rel="stylesheet" type="text/css" href="./css/reset.css">
 		<link rel="stylesheet" type="text/css" href="./css/estilos.css">
@@ -83,9 +83,7 @@
 					<a href="https://www.globalgoals.org" target="_blank"><img src="./img/logo_obs.png" alt="logo do OSD"><li>Global Goals</li></a>
 				</ul>
 			</div>
+			<span>© Copyright 2020 | Design por <a href="https://amandafully.github.io/" target="_blank">Amanda Fully</a> e <a href="https://ygorgabriel99.github.io/" target="_blank">Ygor Gabriel</a></span>
 		</footer>
-		<div class="criacao">
-			<p>© Copyright 2020 | Design por <a href="https://amandafully.github.io/" target="_blank">Amanda Fully</a> e <a href="https://ygorgabriel99.github.io/" target="_blank">Ygor Gabriel</a></p>
-		</div>
 	</body>
 </html>
