--- a/trabalho/sobre.html
+++ b/trabalho/sobre.html
@@ -17,8 +17,8 @@
 			});
 		});
 
-		function mudaImagem(num){
-			$("#imagem").attr("src","./img/logo_ods_"+num+".png");
+		function mudaImagem(valor){
+			$("#imagem").attr("src",valor);
 		}
 	</script>
 		
@@ -50,24 +50,24 @@
 				</figure>
 				
 				<map name="meumapa" id="objetivos">
-					<area id="area1" shape="poly" coords="405,90,446,146,358,188,340,163" href="https://www.globalgoals.org/1-no-poverty" target="_blank" onmousemove="mudaImagem(1)">
-					<area shape="poly" coords="451,158,470,224,373,232,364,201" href="https://www.globalgoals.org/2-zero-hunger" target="_blank" onmousemove="mudaImagem(2)">
-					<area shape="poly" coords="472,235,465,304,373,277,374,245" href="https://www.globalgoals.org/3-good-health-and-well-being" target="_blank" onmousemove="mudaImagem(3)">
-					<area shape="poly" coords="462,316,431,377,353,318,368,288" href="https://www.globalgoals.org/4-quality-education" target="_blank" onmousemove="mudaImagem(4)">
-					<area shape="poly" coords="423,387,374,435,323,351,346,328" href="https://www.globalgoals.org/5-gender-equality" target="_blank" onmousemove="mudaImagem(5)">
-					<area shape="poly" coords="363,441,299,467,281,371,312,359" href="https://www.globalgoals.org/6-clean-water-and-sanitation" target="_blank" onmousemove="mudaImagem(6)">
-					<area shape="poly" coords="287,469,217,470,235,372,268,373" href="https://www.globalgoals.org/7-affordable-and-clean-energy" target="_blank" onmousemove="mudaImagem(7)">
-					<area shape="poly" coords="204,468,138,444,192,360,222,371" href="https://www.globalgoals.org/8-decent-work-and-economic-growth" target="_blank" onmousemove="mudaImagem(8)">
-					<area shape="poly" coords="128,437,75,390,154,330,180,353" href="https://www.globalgoals.org/9-industry-innovation-and-infrastructure" target="_blank" onmousemove="mudaImagem(9)">
-					<area shape="poly" coords="68,379,35,318,131,290,147,320" href="https://www.globalgoals.org/10-reduced-inequalities" target="_blank" onmousemove="mudaImagem(10)">
+					<area id="area1" shape="poly" coords="405,90,446,146,358,188,340,163" href="https://www.globalgoals.org/1-no-poverty" target="_blank" onmousemove="mudaImagem('./img/logo_ods_1.png')">
+					<area shape="poly" coords="451,158,470,224,373,232,364,201" href="https://www.globalgoals.org/2-zero-hunger" target="_blank" onmousemove="mudaImagem('./img/logo_ods_2.png')">
+					<area shape="poly" coords="472,235,465,304,373,277,374,245" href="https://www.globalgoals.org/3-good-health-and-well-being" target="_blank" onmousemove="mudaImagem('./img/logo_ods_3.png')">
+					<area shape="poly" coords="462,316,431,377,353,318,368,288" href="https://www.globalgoals.org/4-quality-education" target="_blank" onmousemove="mudaImagem('./img/logo_ods_4.png')">
+					<area shape="poly" coords="423,387,374,435,323,351,346,328" href="https://www.globalgoals.org/5-gender-equality" target="_blank" onmousemove="mudaImagem('./img/logo_ods_5.png')">
+					<area shape="poly" coords="363,441,299,467,281,371,312,359" href="https://www.globalgoals.org/6-clean-water-and-sanitation" target="_blank" onmousemove="mudaImagem('./img/logo_ods_6.png')">
+					<area shape="poly" coords="287,469,217,470,235,372,268,373" href="https://www.globalgoals.org/7-affordable-and-clean-energy" target="_blank" onmousemove="mudaImagem('./img/logo_ods_7.png')">
+					<area shape="poly" coords="204,468,138,444,192,360,222,371" href="https://www.globalgoals.org/8-decent-work-and-economic-growth" target="_blank" onmousemove="mudaImagem('./img/logo_ods_8.png')">
+					<area shape="poly" coords="128,437,75,390,154,330,180,353" href="https://www.globalgoals.org/9-industry-innovation-and-infrastructure" target="_blank" onmousemove="mudaImagem('./img/logo_ods_9.png')">
+					<area shape="poly" coords="68,379,35,318,131,290,147,320" href="https://www.globalgoals.org/10-reduced-inequalities" target="_blank" onmousemove="mudaImagem('./img/logo_ods_10.png')">
 					<area shape="poly" coords="33,306,25,235,124,244,129,277" href="https://www.globalgoals.org/11-sustainable-cities-and-communities
-" target="_blank" onmousemove="mudaImagem(11)">
-					<area shape="poly" coords="27,222,48,154,136,199,126,231" href="https://www.globalgoals.org/12-responsible-consumption-and-production" target="_blank" onmousemove="mudaImagem(12)">
-					<area shape="poly" coords="53,142,97,87,162,161,141,187" href="https://www.globalgoals.org/13-climate-action" target="_blank" onmousemove="mudaImagem(13)">
-					<area shape="poly" coords="105,79,164,44,199,135,172,152" href="https://www.globalgoals.org/14-life-below-water" target="_blank" onmousemove="mudaImagem(14)">
-					<area shape="poly" coords="176,39,245,27,244,125,213,130" href="https://www.globalgoals.org/15-life-on-land" target="_blank" onmousemove="mudaImagem(15)">
-					<area shape="poly" coords="258,28,324,39,289,131,258,125" href="https://www.globalgoals.org/16-peace-justice-and-strong-institutions" target="_blank" onmousemove="mudaImagem(16)">
-					<area shape="poly" coords="337,45,395,82,329,153,302,136" href="https://www.globalgoals.org/17-partnerships-for-the-goals" target="_blank" onmousemove="mudaImagem(17)">
+" target="_blank" onmousemove="mudaImagem('./img/logo_ods_11.png')">
+					<area shape="poly" coords="27,222,48,154,136,199,126,231" href="https://www.globalgoals.org/12-responsible-consumption-and-production" target="_blank" onmousemove="mudaImagem('./img/logo_ods_12.png')">
+					<area shape="poly" coords="53,142,97,87,162,161,141,187" href="https://www.globalgoals.org/13-climate-action" target="_blank" onmousemove="mudaImagem('./img/logo_ods_13.png')">
+					<area shape="poly" coords="105,79,164,44,199,135,172,152" href="https://www.globalgoals.org/14-life-below-water" target="_blank" onmousemove="mudaImagem('./img/logo_ods_14.png')">
+					<area shape="poly" coords="176,39,245,27,244,125,213,130" href="https://www.globalgoals.org/15-life-on-land" target="_blank" onmousemove="mudaImagem('./img/logo_ods_15.png')">
+					<area shape="poly" coords="258,28,324,39,289,131,258,125" href="https://www.globalgoals.org/16-peace-justice-and-strong-institutions" target="_blank" onmousemove="mudaImagem('./img/logo_ods_16.png')">
+					<area shape="poly" coords="337,45,395,82,329,153,302,136" href="https://www.globalgoals.org/17-partnerships-for-the-goals" target="_blank" onmousemove="mudaImagem('./img/logo_ods_17.png')">
 				</map>
 				<div class="conteudo">	
 					<p>Com apenas 10 anos pela frente, um ambicioso esforço global está em andamento para cumprir a promessa de 2030 - mobilizando mais governos, sociedade civil, empresas e conclamando todas as pessoas a fazerem suas as Metas Globais.</p>
